--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -229,8 +229,7 @@
 	
 	
 	function loadJourneyFlowReport(){
-		var containerId = 'journeyFlowReport';
-		showJourneyFlowReport( {"journeyMapId": currentJourneyMapId}, containerId )
+		showJourneyFlowReport({"journeyMapId": currentJourneyMapId}, 'journeyFlowReport' )
 	}
 	
 	// DEMO to load and test the report as a graph
