--- a/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
@@ -2,11 +2,16 @@
 <!-- Segment Listing -->
 
 <style>
-.segment_name_in_list { 
-	min-width: 235px!important;
+.segment_name_in_list{ 
+	min-width: 240px!important;
+}
+.segment_name_in_list a{ 
 	color: #3300ff!important;
 	font-size:14px!important;
 	font-weight: bold;
+}
+#segment_list_table i.fa {
+	color: #3300ff!important;
 }
 th.sorting, th.sorting_desc, th.sorting_asc {
 	text-decoration: underline;
