upgrade and improve system

--- a/resources/app-templates/recommender/content-item.html
+++ b/resources/app-templates/recommender/content-item.html
@@ -108,6 +108,13 @@
 	#video_holder {
 		text-align: center;
 	}
+	
+	pre {
+	    display: block;
+	    font-size: 88%;
+	    color: white!important;
+	    margin: 20px 0;
+	}
 </style>
 	
 </head>
