upgrade for new features and UI UX

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -167,7 +167,6 @@
 	<!-- CodeMirror for HTML Editor -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/show-hint.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/xml/xml.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/css/css.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -194,9 +193,9 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/theme.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 	<script src="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/js/funnel-graph.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
-	<!-- Web-socket  -->
-	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.6.3/vertx-eventbus.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- Web Socket  -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.9.4/vertx-eventbus.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Library to copy text to clipboard -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
