upgrade new features in  profile report

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -373,14 +373,14 @@
 									<div class="col-lg-12" style="margin-bottom: 6px" >
 										
 										<div class="col-lg-6">
-											<input id="keywords_filter_events" class="form-control" type="text" placeholder="Enter keywords to filter tracking events"  autocomplete="off"  >
+											<input id="keywords_filter_events" class="form-control" type="text" placeholder="Enter keywords to filter events by touchpoint's name"  autocomplete="off"  >
 										</div>
 										<div class="col-lg-6">
-											<button type="button" class="btn btn-primary" onclick="filterEventFlow()" title="Filter event activities"  > 
+											<button type="button" class="btn btn-primary" onclick="loadEventsInProfile(false)" title="Filter event activities"  > 
 									     		<i class="fa fa-filter" aria-hidden="true"></i> Filter
 									     	</button>
-									     	<button type="button" class="btn btn-do-now" onclick="loadEventsInProfile()" title="Refresh event activities"  > 
-									     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
+									     	<button type="button" class="btn btn-do-now" onclick="loadEventsInProfile(true)" title="Refresh event activities"  > 
+									     		<i class="fa fa-refresh" aria-hidden="true"></i> Reload
 									     	</button>
 										</div>
 									</div>
@@ -396,7 +396,7 @@
 								<div id="profile_activitiy_flow_loader" class="loader"></div>
 								<div style="text-align: center; margin: auto;">
 									<div id="profile_activitiy_flow_done" style="display: none;"> <h3 style="text-align: center;"> All data is loaded !</h3> </div>
-									<button type="button" class="btn btn-do-now" onclick="loadMoreEventsInProfile()" title="Load more event activities"  style="margin-top: 20px;"> 
+									<button id="btn_loadMoreEventsInProfile" type="button" class="btn btn-do-now" onclick="loadMoreEventsInProfile()" title="Load more event activities"  style="margin-top: 20px;"> 
 						     			<i class="fa fa-refresh" aria-hidden="true"></i> Load more
 						     		</button>
 								</div>
