--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -20,7 +20,6 @@
     
 <div class="container-fluid">
     <!-- MAIN BODY here -->
-
 	<div class="row">
 		<div class="col-lg-12">
 		
@@ -68,18 +67,15 @@
 			
 		</div>
 	</div>
-
 </div>
-
 
 <script>
 	var systemConfigMap = {};
-	var initSystemConfigManagement = function() {
+	var initSystemConfigManagement = initSystemConfigManagement || function() {
 		setupTabPanels();
 		loadSystemInfoConfigs();
 	}
 </script>
-
 
 <script id='tpl_system_config_box' type="text/html" >
 <div class="col-lg-4">
