fix bugs synchLeoVisitorId and improve text UX/UI

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -227,11 +227,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape.js-panzoom.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape-panzoom.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
-	<!-- i18n Data Model -->
-	<script src="//{{dnsDomainLeoAdmin}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
-	
 	<!-- BotUI CSS and JS  -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui-theme-default.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.14/vue.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -241,6 +238,13 @@
 	
 	<!-- https://markjs.io : keyword highlighter  -->
 	<script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.1/dist/jquery.mark.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- Drawflow -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/drawflow.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/drawflow.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- i18n Data Model -->
+	<script src="//{{dnsDomainLeoAdmin}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
 </head>
 
 <body>
