--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -100,13 +100,13 @@
 			<div class="tab-pane active" id="panel_summary_report" >
 				<!-- Event Matrix -->
 				<div class="col-lg-12"  >
-					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Event Matrix </h4> 
+					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Matrix Report between the Touchpoint Hubs and Event Metrics </h4> 
 					<div id="journey_map_event_matrix" class="col-lg-12"> </div>
 				</div>
 				
 				<!-- Event Observer Bar Chart -->
             	<div class="col-lg-12">
-					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Event Sources </h4> 
+					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Top Event Sources </h4> 
 					<div id="journeyObserverChart" class="col-lg-12"> </div>
 				</div>	
 			</div>
