--- a/resources/app-templates/recommender/presentation-item.html
+++ b/resources/app-templates/recommender/presentation-item.html
@@ -165,7 +165,7 @@
 			}
 			else {
 				// in desktop PC
-				pcNode.css('margin',"auto").css('width',"92%!important");
+				pcNode.css('margin',"auto").css('width',"82%!important");
 				pcNode.addClass('reveal_pc_screen');
 			}
 			
@@ -240,7 +240,7 @@
 		})();
 	</script>
 	
-	<script src="https://www.youtube.com/iframe_api"></script>
+	<script src="https://www.youtube.com/iframe_api" async="true" ></script>
 	<script>
 		function youtubeParser(url){
 		    var regExp = /^.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#&?]*).*/;
