--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="Trieu Nguyen(Thomas) - trieu@leocdp.com">
-	
+	<meta name="referrer" content="no-referrer" />
 	<meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=4, user-scalable=1" name="viewport"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=100"/>
 	
@@ -74,7 +74,7 @@
 	<script src="https://{{baseStaticUrl}}/js/utils/jquery-ui.min.js?_={{cacheBustingKey}}"></script>
 	
 	<!-- lscache for HTML5 localStorage -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lscache/1.3.2/lscache.min.js"></script>	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lscache/1.3.2/lscache.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>	
 	
 	<!-- Bootstrap Core JavaScript -->
 	<script src="https://{{baseStaticUrl}}/js/utils/bootstrap.min.js?_={{cacheBustingKey}}"></script>
@@ -143,16 +143,16 @@
 	<script src="https://{{baseStaticUrl}}/js/utils/base64.js?_={{cacheBustingKey}}"></script>
 	
 	<!-- SortableJS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<!-- Autocomplete -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/easy-autocomplete.themes.min.css" rel="stylesheet" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/easy-autocomplete.min.css" rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/jquery.easy-autocomplete.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/easy-autocomplete.themes.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/easy-autocomplete.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/jquery.easy-autocomplete.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- jQuery Tags Input for keywords  -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
 
 	<!-- paginationjs -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.5.0/pagination.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"crossorigin="anonymous" referrerpolicy="no-referrer"/>
